@@ -9,6 +9,7 @@ Diakonos Changelog
 - Slightly improve render speed of some highlighted languages.
 - Fuzzy file find no longer active when current input line is an absolute path (performance improvement).
 - Searching within a selection now highlights only within selection, and reports only the number of matches in the selection.
+- Can now replace all within selection.
 
 0.9.2
 
